add image downloading

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ FAB_EMAIL=""
 FAB_PASSWORD=""
 FAB_USER_AGENT="fab|android|playstore|1.0.3|10|Android SDK built for x86|google|en|US"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
+DOWNLOAD_FOLDER="images"
