--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/teamreflex/fab-fetch#readme",
   "dependencies": {
+    "@types/async-retry": "^1.4.3",
     "@types/luxon": "^2.0.9",
+    "async-retry": "^1.3.3",
     "chalk": "^5.0.0",
     "dotenv": "^16.0.0",
     "luxon": "^2.3.1",
