--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+ENVIRONMENT="dev"
 TIMEOUT=60000
 FAB_ACCESS_TOKEN=""
 FAB_USER_ID=
@@ -6,6 +7,7 @@ FAB_PASSWORD=""
 FAB_USER_AGENT="fab|android|playstore|1.0.3|10|Android SDK built for x86|google|en|US"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
+TWITTER_ENABLED=false
 TWITTER_API_KEY=
 TWITTER_API_SECRET=
 TWITTER_ACCESS_TOKEN=
