add profile image support

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,11 @@ FAB_USER_AGENT="fab|android|playstore|1.0.3|10|Android SDK built for x86|google|
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
 TWITTER_ENABLED=false
-TWITTER_API_KEY=
-TWITTER_API_SECRET=
-TWITTER_ACCESS_TOKEN=
-TWITTER_ACCESS_SECRET=
+TWITTER_ARCHIVE_API_KEY=
+TWITTER_ARCHIVE_API_SECRET=
+TWITTER_ARCHIVE_ACCESS_TOKEN=
+TWITTER_ARCHIVE_ACCESS_SECRET=
+TWITTER_PROFILES_API_KEY=
+TWITTER_PROFILES_API_SECRET=
+TWITTER_PROFILES_ACCESS_TOKEN=
+TWITTER_PROFILES_ACCESS_SECRET=
