--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-ENVIRONMENT="dev"
+ENVIRONMENT="prod"
 TIMEOUT=60000
 FAB_ACCESS_TOKEN=""
 FAB_USER_ID=
 FAB_EMAIL=""
 FAB_PASSWORD=""
-FAB_USER_AGENT="fab|android|playstore|1.0.3|10|Android SDK built for x86|google|en|US"
+FAB_USER_AGENT="fab|android|playstore|1.0.4|10|Android SDK built for x86|google|en|US"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
 TWITTER_ENABLED=false
