--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "@types/luxon": "^2.0.9",
       "async-retry": "^1.3.3",
       "chalk": "^5.0.0",
+      "cheerio": "^1.0.0-rc.10",
       "dotenv": "^16.0.0",
       "luxon": "^2.3.1",
       "node-fetch": "^3.2.0",
