default to using the message thumbnail

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ FAB_USER_AGENT="fab|android|playstore|%version%|10|Android SDK built for x86|goo
 FAB_PLAYSTORE="https://play.google.com/store/apps/details?id=com.neowizlab.fab"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
+PAY_ON_FALLBACK=true
 TWITTER_ENABLED=false
 TWITTER_ARCHIVE_API_KEY=
 TWITTER_ARCHIVE_API_SECRET=
