add post decryption

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ FAB_PLAYSTORE="https://play.google.com/store/apps/details?id=com.neowizlab.fab"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
 PAY_ON_FALLBACK=true
+DECRYPT_ALL=false
 TWITTER_ENABLED=false
 TWITTER_ARCHIVE_API_KEY=
 TWITTER_ARCHIVE_API_SECRET=
