--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
    "homepage": "https://github.com/teamreflex/fab-fetch#readme",
    "dependencies": {
       "@types/async-retry": "^1.4.3",
+      "@types/crypto-js": "^4.1.1",
       "@types/luxon": "^2.0.9",
       "async-retry": "^1.3.3",
       "chalk": "^5.0.0",
       "cheerio": "^1.0.0-rc.10",
+      "crypto-js": "^4.1.1",
       "dotenv": "^16.0.0",
       "luxon": "^2.3.1",
       "node-fetch": "^3.2.0",
