--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,14 @@ FAB_ACCESS_TOKEN=""
 FAB_USER_ID=
 FAB_EMAIL=""
 FAB_PASSWORD=""
-FAB_VERSION="1.1.0"
+FAB_VERSION="1.2.2"
 FAB_USER_AGENT="fab|android|playstore|%version%|10|Android SDK built for x86|google|en|US"
 FAB_PLAYSTORE="https://play.google.com/store/apps/details?id=com.neowizlab.fab"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
 PAY_ON_FALLBACK=true
 DECRYPT_ALL=false
+MONTHLY_FOLDERS=true
 TWITTER_ENABLED=false
 TWITTER_ARCHIVE_API_KEY=
 TWITTER_ARCHIVE_API_SECRET=
