--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "description": "Fetch and archive content from Fab.",
    "type": "module",
    "scripts": {
-      "start": "node --loader ts-node/esm src/app.ts"
+      "start": "node --loader ts-node/esm src/app.ts",
+      "typeorm": "typeorm-ts-node-esm"
    },
    "repository": {
       "type": "git",
@@ -28,10 +29,10 @@
       "luxon": "^2.3.1",
       "node-fetch": "^3.2.0",
       "reflect-metadata": "^0.1.13",
-      "sqlite3": "^4.0.3",
-      "ts-node": "^10.5.0",
+      "sqlite3": "^5.0.2",
+      "ts-node": "^10.7.0",
       "twitter-api-v2": "^1.11.0",
-      "typeorm": "0.2.45",
+      "typeorm": "0.3.9",
       "typescript": "^4.5.5"
    },
    "devDependencies": {
