add switch for toggling voice comment fetching

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DOWNLOAD_FOLDER="images"
 PAY_ON_FALLBACK=true
 DECRYPT_ALL=false
 MONTHLY_FOLDERS=true
+VOICE_COMMENTS_ENABLED=true
 TWITTER_ENABLED=false
 TWITTER_ARCHIVE_API_KEY=
 TWITTER_ARCHIVE_API_SECRET=
