--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="images"
 PAY_ON_FALLBACK=true
 DECRYPT_ALL=false
+PAY_FOR_USER_IDS="4,7"
 MONTHLY_FOLDERS=true
 VOICE_COMMENTS_ENABLED=true
 TWITTER_ENABLED=false
