--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-   "name": "fab-fetch",
-   "version": "2.0.0",
-   "description": "Fetch and archive content from Fab.",
-   "type": "module",
-   "scripts": {
-      "start": "node --loader ts-node/esm src/app.ts",
-      "typeorm": "typeorm-ts-node-esm"
-   },
-   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/teamreflex/fab-fetch.git"
-   },
-   "author": "Kyle Ward <kairu@team-reflex.com>",
-   "license": "MIT",
-   "bugs": {
-      "url": "https://github.com/teamreflex/fab-fetch/issues"
-   },
-   "homepage": "https://github.com/teamreflex/fab-fetch#readme",
-   "dependencies": {
-      "@types/async-retry": "^1.4.3",
-      "@types/crypto-js": "^4.1.1",
-      "@types/luxon": "^2.0.9",
-      "async-retry": "^1.3.3",
-      "chalk": "^5.0.0",
-      "cheerio": "^1.0.0-rc.10",
-      "crypto-js": "^4.1.1",
-      "dotenv": "^16.0.0",
-      "luxon": "^2.3.1",
-      "node-fetch": "^3.2.0",
-      "reflect-metadata": "^0.1.13",
-      "sqlite3": "^5.0.2",
-      "ts-node": "^10.7.0",
-      "twitter-api-v2": "^1.11.0",
-      "typeorm": "0.3.9",
-      "typescript": "^4.5.5"
-   },
-   "devDependencies": {
-      "@types/node": "^16.11.10",
-      "@typescript-eslint/eslint-plugin": "^5.12.1",
-      "@typescript-eslint/parser": "^5.12.1",
-      "eslint": "^8.9.0",
-      "eslint-config-airbnb-base": "^15.0.0",
-      "eslint-plugin-import": "^2.25.4"
-   }
+  "name": "fab-fetch",
+  "version": "3.0.0",
+  "description": "Fetch and archive content from Fab.",
+  "type": "module",
+  "scripts": {
+    "start": "ts-node src/app.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/teamreflex/fab-fetch.git"
+  },
+  "author": "Kyle Ward <kairu@team-reflex.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/teamreflex/fab-fetch/issues"
+  },
+  "homepage": "https://github.com/teamreflex/fab-fetch#readme",
+  "dependencies": {
+    "@prisma/client": "^4.6.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/luxon": "^2.0.9",
+    "async-retry": "^1.3.3",
+    "chalk": "^5.0.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
+    "luxon": "^2.3.1",
+    "node-fetch": "^3.3.0",
+    "prisma": "^4.6.1",
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.9.1",
+    "twitter-api-v2": "^1.11.0",
+    "typescript": "^4.9.0"
+  },
+  "devDependencies": {
+    "@types/async-retry": "^1.4.5",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
