--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fetch and archive content from Fab.",
   "type": "module",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "start": "ts-node src/app.ts",
+    "migrate": "ts-node src/migration/migrate.ts"
   },
   "repository": {
     "type": "git",
@@ -21,19 +22,20 @@
     "@types/crypto-js": "^4.1.1",
     "@types/luxon": "^2.0.9",
     "async-retry": "^1.3.3",
+    "better-sqlite3": "^7.6.2",
     "chalk": "^5.0.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "luxon": "^2.3.1",
     "node-fetch": "^3.3.0",
     "prisma": "^4.6.1",
-    "sqlite3": "^5.0.2",
     "ts-node": "^10.9.1",
     "twitter-api-v2": "^1.11.0",
     "typescript": "^4.9.0"
   },
   "devDependencies": {
     "@types/async-retry": "^1.4.5",
+    "@types/better-sqlite3": "^7.6.2",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
