--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^5.0.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
+    "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "node-fetch": "^3.3.0",
     "prisma": "^4.6.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/async-retry": "^1.4.5",
     "@types/better-sqlite3": "^7.6.2",
+    "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
