add toggle for fetching all

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ API_URL="https://vip-fab-api.myfab.tv/fapi/2"
 DOWNLOAD_FOLDER="data"
 GROUP_ID=1
 PAY_ON_FALLBACK=true
+FETCH_ALL=false
 DECRYPT_ALL=false
 PAY_FOR_USER_IDS="4,7"
 MONTHLY_FOLDERS=true
