--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "node-fetch": "^3.3.0",
+    "playwright": "^1.28.0",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
     "twitter-api-v2": "^1.11.0",
