--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 ENVIRONMENT="prod"
+DATABASE_URL="postgres://postgres:password@postgres:5432/fab-fetch"
 TIMEOUT=60000
 FAB_ACCESS_TOKEN=""
 FAB_USER_ID=
 FAB_EMAIL=""
 FAB_PASSWORD=""
-FAB_VERSION="1.4.0"
+FAB_VERSION="1.5.3"
 FAB_USER_AGENT="fab|android|playstore|%version%|10|Android SDK built for x86|google|en|US"
 FAB_PLAYSTORE="https://play.google.com/store/apps/details?id=com.neowizlab.fab"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
-DOWNLOAD_FOLDER="data"
-GROUP_ID=1
+DOWNLOAD_FOLDER="images"
 PAY_ON_FALLBACK=true
 FETCH_ALL=false
 DECRYPT_ALL=false
-PAY_FOR_USER_IDS="4,7"
+PAY_FOR_USER_IDS="85354"
 MONTHLY_FOLDERS=true
 VOICE_COMMENTS_ENABLED=true
 TWITTER_ENABLED=false
