--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ FAB_ACCESS_TOKEN=""
 FAB_USER_ID=
 FAB_EMAIL=""
 FAB_PASSWORD=""
-FAB_VERSION="1.2.2"
+FAB_VERSION="1.6.0"
 FAB_USER_AGENT="fab|android|playstore|%version%|10|Android SDK built for x86|google|en|US"
 FAB_PLAYSTORE="https://play.google.com/store/apps/details?id=com.neowizlab.fab"
 API_URL="https://vip-fab-api.myfab.tv/fapi/2"
@@ -14,6 +14,7 @@ DECRYPT_ALL=false
 PAY_FOR_USER_IDS="4,7"
 MONTHLY_FOLDERS=true
 VOICE_COMMENTS_ENABLED=true
+IMAGE_COMMENTS_ENABLED=true
 TWITTER_ENABLED=false
 TWITTER_ARCHIVE_API_KEY=
 TWITTER_ARCHIVE_API_SECRET=
